--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -1829,6 +1829,10 @@ textarea {
     justify-content: flex-start;
 }
 
+.advantages__item--page .advantages__text {
+    max-width: 200px;
+}
+
 .advantages__img {
     margin-bottom: 20px;
     width: 80px;
@@ -2541,6 +2545,7 @@ textarea {
     width: 100%;
     margin-bottom: 5px;
     border-bottom: 1px solid #6F654E;
+    border-radius: 0;
 }
 
 .events-search__input::-webkit-input-placeholder {
@@ -2955,7 +2960,7 @@ textarea {
 
 .preview__btn {
     display: none;
-    color: #2DD9FF;
+    color: #704F3B;
     text-decoration: underline;
     text-align: center;
     margin-inline: auto;
@@ -2963,6 +2968,7 @@ textarea {
 
 .preview__btn svg {
     transition: 0.1s linear;
+    fill: #704F3B;
 }
 
 .preview__btn.hide {
@@ -3998,7 +4004,6 @@ textarea {
     }
 
     .preview__btn svg {
-        fill: #2DD9FF;
         width: 11px;
         height: 11px;
     }
@@ -4117,10 +4122,6 @@ textarea {
 
     .request__wrapp {
         max-width: 100%;
-    }
-
-    .request__form.event__form .request__input:last-child {
-        display: none;
     }
 
     .request__input {
