--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -2546,6 +2546,7 @@ textarea {
     margin-bottom: 5px;
     border-bottom: 1px solid #6F654E;
     border-radius: 0;
+    padding-left: 5px;
 }
 
 .events-search__input::-webkit-input-placeholder {
@@ -2708,6 +2709,11 @@ textarea {
 
 .request.page .request__btn {
     color: #fff;
+}
+
+.request.page .request__btn[disabled] {
+    color: rgba(255, 255, 255, 0.4);
+    border-color: rgba(255, 255, 255, 0.4);
 }
 
 .request__inner {
@@ -2906,6 +2912,7 @@ textarea {
 
 .tabs__content {
     display: none;
+    transition: 0.1s linear;
 }
 
 .tabs__content.active {
@@ -4147,6 +4154,10 @@ textarea {
 
     .advantages__text {
         max-width: 220px;
+    }
+
+    .advantages__item--page .advantages__text {
+        max-width: 280px;
     }
 
     .preview__name {
