--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -2668,7 +2668,7 @@ textarea {
 
 .request.page {
     background-color: transparent;
-    max-width: 880px;
+    max-width: 910px;
     margin-inline: auto;
 }
 
@@ -2913,6 +2913,7 @@ textarea {
 .tabs__content {
     display: none;
     transition: 0.1s linear;
+    min-height: 180px;
 }
 
 .tabs__content.active {
@@ -2926,28 +2927,48 @@ textarea {
     margin-inline: auto;
 }
 
-.preview__block {
-    position: relative;
-}
-
 .preview__img {
-    box-shadow: 0px 4px 12px -3px rgba(0, 0, 0, 0.25);
-    border-radius: 8px;
     max-height: 410px;
     width: 100%;
     -o-object-fit: cover;
     object-fit: cover;
-    margin-bottom: 60px;
 }
 
 .preview__name {
     position: absolute;
-    left: 30px;
-    bottom: 60px;
+    left: 15px;
+    bottom: 90px;
     z-index: 1;
-    font-size: clamp(2.73rem, 5.45vw + 1.46rem, 7.2rem);
+    font-size: clamp(2.73rem, 5.45vw + 1.46rem, 3.6rem);
     color: #fff;
     font-weight: 700;
+    max-width: -webkit-fit-content;
+    max-width: -moz-fit-content;
+    max-width: fit-content;
+}
+
+.preview__info {
+    position: absolute;
+    left: 15px;
+    bottom: 20px;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    gap: 20px;
+    color: #fff;
+    font-size: 2.7rem;
+    font-weight: 600;
+}
+
+.preview__info svg {
+    width: 55px;
+    height: 55px;
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 10px;
+    -o-object-fit: cover;
+    object-fit: cover;
 }
 
 .preview__text {
@@ -2990,6 +3011,43 @@ textarea {
 .preview__btn:active svg {
     -webkit-transform: translateY(5px);
     transform: translateY(5px);
+}
+
+.slider-event {
+    margin-bottom: 60px;
+}
+
+.slider-event .swiper-button::after {
+    display: none;
+}
+
+.slider-event__item {
+    border-radius: 20px;
+    overflow: hidden;
+    position: relative;
+}
+
+.slider-event__item::before {
+    content: "";
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.87);
+    height: 100%;
+    width: 45%;
+    opacity: 0.2;
+}
+
+.slider-event .swiper-button__wrapp {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.slider-event .swiper-button__wrapp svg {
+    fill: #FFD75D;
+    height: 50px;
+    width: 25px;
 }
 
 .footer {
@@ -3816,6 +3874,10 @@ textarea {
         font-size: 2rem;
     }
 
+    .preview .slider-event__item::before {
+        width: 50%;
+    }
+
     .footer .nav__list, .footer .info {
         -ms-flex-align: center;
         align-items: center;
@@ -3998,6 +4060,11 @@ textarea {
         padding-inline: 30px;
     }
 
+    .preview__name {
+        max-width: 210px;
+        font-size: 3rem;
+    }
+
     .preview__text:not(:first-of-type) {
         display: none;
     }
@@ -4160,9 +4227,24 @@ textarea {
         max-width: 280px;
     }
 
+    .preview .slider-event__item::before {
+        width: 60%;
+    }
+
     .preview__name {
-        left: 20px;
-        bottom: 30px;
+        font-size: 2.6rem;
+        bottom: 60px;
+    }
+
+    .preview__info {
+        font-size: 2rem;
+        bottom: 10px;
+    }
+
+    .preview__info svg {
+        width: 40px;
+        height: 40px;
+        padding: 5px;
     }
 
     .footer-contact__wrapp.email {
@@ -4188,6 +4270,20 @@ textarea {
 
     .offer__text {
         margin-bottom: 20px;
+    }
+
+    .preview .slider-event__item::before {
+        width: 60%;
+    }
+
+    .preview__name {
+        font-size: 2.2rem;
+        bottom: 60px;
+        max-width: 150px;
+    }
+
+    .preview__info {
+        font-size: 1.6rem;
     }
 }
 
