--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -1170,14 +1170,12 @@ textarea {
 }
 
 .container {
-    max-width: 1110px;
-    width: 100%;
+    width: min(100vw - 15px, 1110px);
     margin: 0 auto;
-    padding: 0 15px;
 }
 
 .container--fluid {
-    max-width: 910px;
+    width: min(100vw - 15px, 910px);
 }
 
 .burger {
@@ -1622,11 +1620,11 @@ textarea {
 }
 
 .hero__title::before, .steps__title::before, .questionnaire__title::before {
-    left: -13%;
+    left: -10%;
 }
 
 .hero__title::after, .steps__title::after, .questionnaire__title::after {
-    right: -13%;
+    right: -10%;
 }
 
 .hero__subtitle {
@@ -1637,8 +1635,8 @@ textarea {
 }
 
 .slider {
-    overflow: hidden;
     position: relative;
+    overflow: hidden;
 }
 
 .slider .swiper-button__wrapp {
@@ -1650,6 +1648,7 @@ textarea {
 }
 
 .slider .swiper-button {
+    display: none;
     font-size: 0;
     width: 25px;
     height: 50px;
@@ -2397,6 +2396,20 @@ textarea {
     display: none;
 }
 
+.slider-events .swiper-button__wrapp {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.slider-events .swiper-button__wrapp svg {
+    fill: #FFD75D;
+    height: 50px;
+    width: 25px;
+}
+
 .slider-events .swiper-pagination {
     display: -ms-flexbox;
     display: flex;
@@ -2451,20 +2464,9 @@ textarea {
     max-width: -moz-fit-content;
     max-width: fit-content;
     margin-inline: auto;
-}
-
-.slider-events .swiper-button__wrapp {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-}
-
-.slider-events .swiper-button__wrapp svg {
-    fill: #FFD75D;
-    height: 50px;
-    width: 25px;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
 }
 
 .events__heading {
@@ -2917,10 +2919,13 @@ textarea {
     background-color: #EFE7DA;
 }
 
+.tabs__contents {
+    min-height: 180px;
+}
+
 .tabs__content {
     display: none;
     transition: 0.1s linear;
-    min-height: 180px;
 }
 
 .tabs__content.active {
@@ -3022,12 +3027,26 @@ textarea {
 
 .slider-event {
     margin-bottom: 60px;
-    overflow: hidden;
     position: relative;
+    overflow: hidden;
 }
 
 .slider-event .swiper-button::after {
     display: none;
+}
+
+.slider-event .swiper-button__wrapp {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.slider-event .swiper-button__wrapp svg {
+    fill: #FFD75D;
+    height: 50px;
+    width: 25px;
 }
 
 .slider-event__item {
@@ -3043,20 +3062,6 @@ textarea {
     height: 100%;
     width: 45%;
     opacity: 0.2;
-}
-
-.slider-event .swiper-button__wrapp {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-}
-
-.slider-event .swiper-button__wrapp svg {
-    fill: #FFD75D;
-    height: 50px;
-    width: 25px;
 }
 
 .footer {
@@ -3653,10 +3658,6 @@ textarea {
 }
 
 @media (max-width: 991.98px) {
-    .container {
-        max-width: 960px;
-    }
-
     .header-contact__links:first-of-type {
         display: none;
     }
@@ -3765,10 +3766,6 @@ textarea {
 }
 
 @media (max-width: 767.98px) {
-    .container {
-        max-width: 720px;
-    }
-
     .header-contact__links:last-of-type {
         display: none;
     }
@@ -3918,10 +3915,6 @@ textarea {
 }
 
 @media (max-width: 575.98px) {
-    .container {
-        max-width: 540px;
-    }
-
     .header__inner {
         gap: 10px;
     }
@@ -4112,10 +4105,6 @@ textarea {
 }
 
 @media (max-width: 480.98px) {
-    .container {
-        max-width: 100vw;
-    }
-
     .header .logo__img {
         display: none;
     }
