--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -3314,6 +3314,11 @@ textarea {
     left: 270px;
 }
 
+.footer .map__item--ukraine {
+    top: 55px;
+    left: 260px;
+}
+
 .footer .map__item--saudi-arabia {
     top: 115px;
     left: 280px;
@@ -3332,6 +3337,11 @@ textarea {
 .footer .map__item--japan {
     top: 80px;
     right: 40px;
+}
+
+.footer .map__item--china {
+    top: 100px;
+    right: 75px;
 }
 
 .footer .map__item--india {
